[gd_scene load_steps=2 format=2]

[ext_resource path="res://Menus/JoinGame/JoinGame.gd" type="Script" id=1]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -383.0
margin_top = -36.0
margin_right = 383.0
margin_bottom = 36.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MatchID" type="LineEdit" parent="VBoxContainer"]
margin_right = 766.0
margin_bottom = 24.0
placeholder_text = "Match ID"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 28.0
margin_right = 766.0
margin_bottom = 48.0

[node name="JoinGame" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_right = 381.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "Join Game"

[node name="BackButton" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 385.0
margin_right = 766.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "Back To Main Menu"
[connection signal="pressed" from="VBoxContainer/HBoxContainer/JoinGame" to="." method="_on_JoinGame_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/BackButton" to="." method="_on_BackButton_pressed"]
